# smp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: db.cpp  db.hpp  decoder.hpp  library.cpp  library.hpp  main.cpp  output.hpp  player.cpp  player.hpp
src/common/: defines.hpp  types.hpp  utils.cpp  utils.hpp
src/decoders/: mpg123.cpp
src/outputs/: alsa.cpp
test/: library_test.cpp
